# learning-vector-quantization

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  activate_venv.sh  build.sh  build_python.sh  requirements.txt  setup.py
examples/: download_mnist.sh  python_example.py
include/: data_loader.h  lvq_network.h  lvq_tester.h  lvq_trainer.h  utils.h
models/: iris_model.bin.config
python_bindings/: CMakeLists.txt  README.md  lvq_python.cpp
src/: data_loader.cpp  lvq_network.cpp  lvq_tester.cpp  lvq_trainer.cpp  main_demo.cpp  main_iris_demo.cpp  main_test.cpp  main_train.cpp  utils.cpp
